--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0"
   }
 }
